* FIXED: Download problem with Metalink files containing magnet links
* FIXED: Allow fullscreen for videos
* FIXED: Icons for a better rendering on "retina" (like) screens
* FIXED: Multiple issues with the PDF export on Win7 (#374, #396, #431)
* FIXED: Save medias on Windows UNC drives (#682)
* FIXED: Wrong file size in kiwix-serve home page
* FIXED: Deal with multi-arch compilation architectures
* NEW: Allow to save videos and sounds
* NEW: Add a "random article" button to kiwix-serve
* NEW: New supported user interface languages: Chuvash (cv), Fiji
  Hindi Latin script (hif-latn), Mongolian (mn), Newari (new),
  Sanskrit (sa), Uzbek (uz), Turkish (tr), Tagalog (tl), Talysh
  language (tly), Kyrgyz (kir), Bambara (bam), Hakka (hak),
  Hunsrik (hrx), Uyghur in Arabic script (ug-arab), 
  Malagazy (mg) and Azerbaijani (az)
* NEW: On GNU/Linux, replace basch script launcher by a binary (kiwix-launcher)
* NEW: Does not ask to download remote catalogs if user is offline
* NEW: Option to avoid dialog box asking for indexing (#330)
* NEW: Menu item to launch indexing (#455)
* NEW: Run with xulrunner 29
* NEW: Add "Cache-Control" HTTP headers to kiwix-serve output
* NEW: Better searchbox focus handling
* NEW: ZIM, indexes & library saved in profile in a portable manner
* NEW: Open XML library files from the menu
* NEW: Preference to set custom data directory (#279, #323, #366,  #573, #692, #633)
* NEW: --nosearchbar option for kiwix-serve
* NEW: Signature for OSX releases (install without warning)
* NEW: OSX 10.9 support
* NEW: Sort bookmarks alphabetically
* NEW: Able to deal with ZIM files containing relative paths
* NEW: Allow to run launcher in a few other directories
* NEW: Improve file size display in kiwix-serve

Kiwix 0.9 rc2
* FIXED: kiwix-manage generate wrong size for splitted ZIM files (ID: 3547892)
* FIXED: kiwix-install crashes
* FIXED: kiwix-serve memory leak on ARM (ID: 3538663)