@@ -38703,20 +38703,21 @@ const unsigned char server_taskbar_css[]={
   0x69,0x78,0x73,0x65,0x61,0x72,0x63,0x68,0x62,0x6f,0x78,0x20,0x7b,0x0a,0x20,0x20,
   0x20,0x20,0x6d,0x61,0x72,0x67,0x69,0x6e,0x3a,0x20,0x30,0x70,0x78,0x3b,0x0a,0x20,
   0x20,0x20,0x20,0x66,0x6c,0x6f,0x61,0x74,0x3a,0x20,0x72,0x69,0x67,0x68,0x74,0x3b,
-  0x0a,0x7d,0x0a,0x0a,0x23,0x6b,0x69,0x77,0x69,0x78,0x73,0x65,0x61,0x72,0x63,0x68,
-  0x20,0x7b,0x0a,0x20,0x20,0x20,0x20,0x6d,0x61,0x72,0x67,0x69,0x6e,0x3a,0x20,0x30,
-  0x70,0x78,0x3b,0x0a,0x20,0x20,0x20,0x20,0x66,0x6c,0x6f,0x61,0x74,0x3a,0x20,0x72,
-  0x69,0x67,0x68,0x74,0x3b,0x0a,0x7d,0x0a,0x0a,0x2f,0x2a,0x20,0x54,0x72,0x79,0x20,
-  0x74,0x6f,0x20,0x66,0x69,0x78,0x20,0x62,0x75,0x67,0x67,0x79,0x20,0x73,0x74,0x75,
-  0x66,0x66,0x20,0x69,0x6e,0x20,0x6a,0x71,0x75,0x65,0x72,0x79,0x2d,0x75,0x69,0x20,
-  0x61,0x75,0x74,0x6f,0x63,0x6f,0x6d,0x70,0x6c,0x65,0x74,0x65,0x20,0x2a,0x2f,0x0a,
-  0x23,0x75,0x69,0x2d,0x69,0x64,0x2d,0x31,0x20,0x7b,0x0a,0x20,0x20,0x20,0x20,0x62,
-  0x61,0x63,0x6b,0x67,0x72,0x6f,0x75,0x6e,0x64,0x3a,0x20,0x77,0x68,0x69,0x74,0x65,
-  0x3b,0x0a,0x20,0x20,0x20,0x20,0x62,0x6f,0x72,0x64,0x65,0x72,0x3a,0x20,0x73,0x6f,
-  0x6c,0x69,0x64,0x20,0x31,0x70,0x78,0x20,0x67,0x72,0x65,0x79,0x3b,0x0a,0x7d,0x0a,
-  0x0a,0x6c,0x69,0x2e,0x75,0x69,0x2d,0x73,0x74,0x61,0x74,0x65,0x2d,0x66,0x6f,0x63,
-  0x75,0x73,0x20,0x7b,0x0a,0x20,0x20,0x20,0x20,0x66,0x6f,0x6e,0x74,0x2d,0x77,0x65,
-  0x69,0x67,0x68,0x74,0x3a,0x20,0x62,0x6f,0x6c,0x64,0x3b,0x0a,0x7d
+  0x0a,0x20,0x20,0x20,0x20,0x77,0x69,0x64,0x74,0x68,0x3a,0x20,0x33,0x30,0x30,0x70,
+  0x78,0x3b,0x0a,0x7d,0x0a,0x0a,0x23,0x6b,0x69,0x77,0x69,0x78,0x73,0x65,0x61,0x72,
+  0x63,0x68,0x20,0x7b,0x0a,0x20,0x20,0x20,0x20,0x6d,0x61,0x72,0x67,0x69,0x6e,0x3a,
+  0x20,0x30,0x70,0x78,0x3b,0x0a,0x20,0x20,0x20,0x20,0x66,0x6c,0x6f,0x61,0x74,0x3a,
+  0x20,0x72,0x69,0x67,0x68,0x74,0x3b,0x0a,0x7d,0x0a,0x0a,0x2f,0x2a,0x20,0x54,0x72,
+  0x79,0x20,0x74,0x6f,0x20,0x66,0x69,0x78,0x20,0x62,0x75,0x67,0x67,0x79,0x20,0x73,
+  0x74,0x75,0x66,0x66,0x20,0x69,0x6e,0x20,0x6a,0x71,0x75,0x65,0x72,0x79,0x2d,0x75,
+  0x69,0x20,0x61,0x75,0x74,0x6f,0x63,0x6f,0x6d,0x70,0x6c,0x65,0x74,0x65,0x20,0x2a,
+  0x2f,0x0a,0x23,0x75,0x69,0x2d,0x69,0x64,0x2d,0x31,0x20,0x7b,0x0a,0x20,0x20,0x20,
+  0x20,0x62,0x61,0x63,0x6b,0x67,0x72,0x6f,0x75,0x6e,0x64,0x3a,0x20,0x77,0x68,0x69,
+  0x74,0x65,0x3b,0x0a,0x20,0x20,0x20,0x20,0x62,0x6f,0x72,0x64,0x65,0x72,0x3a,0x20,
+  0x73,0x6f,0x6c,0x69,0x64,0x20,0x31,0x70,0x78,0x20,0x67,0x72,0x65,0x79,0x3b,0x0a,
+  0x7d,0x0a,0x0a,0x6c,0x69,0x2e,0x75,0x69,0x2d,0x73,0x74,0x61,0x74,0x65,0x2d,0x66,
+  0x6f,0x63,0x75,0x73,0x20,0x7b,0x0a,0x20,0x20,0x20,0x20,0x66,0x6f,0x6e,0x74,0x2d,
+  0x77,0x65,0x69,0x67,0x68,0x74,0x3a,0x20,0x62,0x6f,0x6c,0x64,0x3b,0x0a,0x7d
   };
 
 const unsigned char server_include_html_part[]={
