@@ -33,6 +33,7 @@ Kiwix 0.9
 * FIXED: Save medias on Windows UNC drives (#682)
 * FIXED: Wrong file size in kiwix-serve home page
 * FIXED: Deal with multi-arch compilation architectures
+* FIXED: kiwix-serve crash if unattended search "start" & "end" values
 * NEW: Allow to save videos and sounds
 * NEW: Add a "random article" button to kiwix-serve
 * NEW: New supported user interface languages: Chuvash (cv), Fiji
